<resources>
    <string name="app_name">Quiz Cross</string>
    <string name="preference_file_key">Quiz_Cross_Preference</string>
    <string name="cross">Cross</string>
    <string name="circle">Circle</string>
    <string name="position00">Position 00</string>
    <string name="position01">Position 01</string>
    <string name="position02">Position 02</string>
    <string name="position10">Position 10</string>
    <string name="position11">Position 11</string>
    <string name="position12">Position 12</string>
    <string name="position20">Position 20</string>
    <string name="position21">Position 21</string>
    <string name="position22">Position 22</string>
    <string name="new_game_button">New Game</string>
    <string name="settings_button">Settings</string>
    <string name="home_button">Home</string>
    <string name="player_name">Name</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="wins_player1">0</string>
    <string name="wins_player2">0</string>
    <string name="turn">Turn: </string>
    <string name="edit_name_player">Enter a new name</string>

    <string name="scienceNature">Science and Nature</string>
    <string name="mathematics">Mathematics</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="art">Art</string>
    <string name="animals">Animals</string>
    <string name="films">Films</string>
    <string name="generalKnowledge">General Knowledge</string>

    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>

    <string name="submit_button">Submit</string>
    <string name="question_statement">Question Statement</string>
    <string name="alternative">Alternative</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <string name="warning_title">Warning!</string>
    <string name="error_message_category">At least one question category must be selected</string>
    <string name="error_message_player_name">Player names cannot be the same</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="close_button">Close</string>
    <string name="success_message">The settings were saved!</string>
    <string name="warning_unselected_alternative">Select an alternative!</string>

    <string name="right_answer_title">Right Answer</string>
    <string name="right_answer_message">Congratulations you got the answer right</string>
    <string name="wrong_answer_Title">Wrong answer</string>
    <string name="wrong_answer_message">I am sorry, you got the answer wrong</string>


    <string name="point">Point</string>
    <string name="win">Win</string>
    <string name="tied_game">The game ended in a draw</string>


</resources>