<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSettingsTextView">

        <ImageView
            android:id="@+id/imageViewPlayer1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_player"
            app:tint="@color/player1_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPlayer1Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/editPlayer1NameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_edit" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/titleSettingsTextView">

        <ImageView
            android:id="@+id/imageViewPlayer2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_player"
            app:tint="@color/player2_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPlayer2Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/editPlayer2NameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_edit" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/difficultChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/easyChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/easy_difficulty"
            android:textColor="@color/button_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mediumChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/medium_difficulty" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hardChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/hard_difficulty" />

    </com.google.android.material.chip.ChipGroup>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="215dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultChipGroup">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/filmsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/films"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/generalKnowledgeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/generalKnowledge"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/scienceNatureCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/scienceNature"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/artCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/art"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/geographyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/geography"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/historyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/mathematicsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/mathematics"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/animalsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/animals"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_custom_button"
        android:text="@string/save_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/titleSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_settings_48"
        android:gravity="center"
        android:text="@string/settings_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="CompatCompoundDrawable
        />

</androidx.constraintlayout.widget.ConstraintLayout>
        tools:layout_editor_absoluteX=" />137dp"