<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/position00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position00"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position01"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position02"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/position10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position10"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position11"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position12"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/position20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position20"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position21"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/box00"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/position22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color"
                android:contentDescription="@string/position22"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>