<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.NewGameActivity">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPlayer1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_player"
                app:tint="@color/player1_color" />

            <TextView
                android:id="@+id/textPlayer1Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_cross" />

            <TextView
                android:id="@+id/textWinsPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/wins_player1"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textWinsPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/wins_player2"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_circle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPlayer2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/ic_player"
                app:tint="@color/player2_color" />

            <TextView
                android:id="@+id/textPlayer2Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <include
        android:id="@+id/matrix"
        layout="@layout/matrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTurn" />

</androidx.constraintlayout.widget.ConstraintLayout>